--- a/index.html
+++ b/index.html
@@ -1,129 +1,146 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Exercícios Interativos JS</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            background-color: #747272;
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        button {
-            margin: 5px;
-            padding: 10px;
-            font-size: 14px;
-        }
-    </style>
+  <title>exercicio 04</title>
 </head>
-
 <body>
-    <h1>Exercícios 04 em JavaScript</h1>
+  <h2>exercicio 04</h2>
 
-    <div id="botoes"></div>
+  <button onclick="ex1()">1 - Metade se maior que 20</button><br><br>
+  <button onclick="ex2()">2 - Capital do Brasil</button><br><br>
+  <button onclick="ex3()">3 - Par ou Ímpar</button><br><br>
+  <button onclick="ex4()">4 - Divisível por 4 e 5</button><br><br>
+  <button onclick="ex5()">5 - Média de 4 notas</button><br><br>
+  <button onclick="ex6()">6 - Diferença entre dois números</button><br><br>
+  <button onclick="ex7()">7 - Módulo de um número</button><br><br>
+  <button onclick="ex8()">8 - Número entre 1 e 10</button><br><br>
+  <button onclick="ex9()">9 - Positivo, Negativo ou Nulo</button><br><br>
+  <button onclick="ex10()">10 - Verificar divisor</button><br><br>
+  <button onclick="ex11()">11 - Algarismo das centenas</button><br><br>
+  <button onclick="ex12()">12 - Maior e menor entre 5</button><br><br>
+  <button onclick="ex13()">13 - 3 números em ordem crescente</button><br><br>
 
-    <script>
-        const exercicios = [
-            () => {
-                let num = Number(prompt("Digite um número:"));
-                alert(num > 20 ? "A metade do número é: " + (num / 2) : "O número é: " + num);
-            },
+  <script>
+    function ex1() {
+      let num = Number(prompt("Digite um número:"));
+      if (num > 20) {
+        alert("Metade: " + (num / 2));
+      } else {
+        alert("Número: " + num);
+      }
+    }
 
+    function ex2() {
+      let capital = prompt("Qual a capital do Brasil?");
+      if (capital.toLowerCase() === "brasília" || capital.toLowerCase() === "brasilia") {
+        alert("Correto!");
+      } else {
+        alert("Errado.");
+      }
+    }
 
-            () => {
-                let resposta = prompt("Qual é a capital do Brasil?").trim().toLowerCase();
-                alert((resposta === "brasília" || resposta === "brasilia") ? "Resposta certa!" : "Resposta errada.");
-            },
+    function ex3() {
+      let num = Number(prompt("Digite um número:"));
+      if (num % 2 === 0) {
+        alert("Número par");
+      } else {
+        alert("Número ímpar");
+      }
+    }
 
+    function ex4() {
+      let num = Number(prompt("Digite um número:"));
+      if (num % 4 === 0 && num % 5 === 0) {
+        alert("Divisível por 4 e 5");
+      } else {
+        alert("Não é divisível por 4 e 5");
+      }
+    }
 
-            () => {
-                let num = Number(prompt("Digite um número:"));
-                alert(num % 2 === 0 ? "O número é par." : "O número é ímpar.");
-            },
+    function ex5() {
+      let n1 = Number(prompt("Nota 1:"));
+      let n2 = Number(prompt("Nota 2:"));
+      let n3 = Number(prompt("Nota 3:"));
+      let n4 = Number(prompt("Nota 4:"));
+      let media = (n1 + n2 + n3 + n4) / 4;
 
+      if (media >= 5) {
+        alert("Aprovado! Média: " + media.toFixed(2));
+      } else {
+        alert("Reprovado. Média: " + media.toFixed(2));
+      }
+    }
 
-            () => {
-                let num = Number(prompt("Digite um número:"));
-                alert(num % 4 === 0 && num % 5 === 0 ? "Valor divisível por 4 e 5: " + num : "Valor não é divisível por 4 e 5.");
-            },
+    function ex6() {
+      let n1 = Number(prompt("Digite o primeiro número:"));
+      let n2 = Number(prompt("Digite o segundo número:"));
+      let diferenca = Math.abs(n1 - n2);
+      alert("Diferença: " + diferenca);
+    }
 
+    function ex7() {
+      let num = Number(prompt("Digite um número (positivo ou negativo):"));
+      alert("Módulo: " + Math.abs(num));
+    }
 
-            () => {
-                let notas = [];
-                for (let i = 0; i < 4; i++) notas.push(Number(prompt(`Digite a nota ${i + 1}:`)));
-                let media = notas.reduce((a, b) => a + b, 0) / 4;
-                alert(media >= 5 ? `Aprovado com média ${media.toFixed(2)}` : `Reprovado com média ${media.toFixed(2)}`);
-            },
+    function ex8() {
+      let num = Number(prompt("Digite um número:"));
+      if (num >= 1 && num <= 10) {
+        alert("Está entre 1 e 10");
+      } else {
+        alert("Fora da faixa");
+      }
+    }
 
+    function ex9() {
+      let num = Number(prompt("Digite um número:"));
+      if (num > 0) {
+        alert("Positivo");
+      } else if (num < 0) {
+        alert("Negativo");
+      } else {
+        alert("Nulo (zero)");
+      }
+    }
 
-            () => {
-                let a = Number(prompt("Digite o primeiro valor:"));
-                let b = Number(prompt("Digite o segundo valor:"));
-                alert("Diferença: " + Math.abs(a - b));
-            },
+    function ex10() {
+      let a = Number(prompt("Digite o primeiro número:"));
+      let b = Number(prompt("Digite o segundo número:"));
+      if (a % b === 0) {
+        alert(b + " é divisor de " + a);
+      } else {
+        alert(b + " NÃO é divisor de " + a);
+      }
+    }
 
+    function ex11() {
+      let num = prompt("Digite um número de 3 dígitos:");
+      if (num.length === 3 && !isNaN(num)) {
+        alert("Algarismo das centenas: " + num[0]);
+      } else {
+        alert("Número inválido.");
+      }
+    }
 
-            () => {
-                let num = Number(prompt("Digite um número:"));
-                alert("O módulo do número é: " + Math.abs(num));
-            },
+    function ex12() {
+      let n1 = Number(prompt("Número 1:"));
+      let n2 = Number(prompt("Número 2:"));
+      let n3 = Number(prompt("Número 3:"));
+      let n4 = Number(prompt("Número 4:"));
+      let n5 = Number(prompt("Número 5:"));
+      let maior = Math.max(n1, n2, n3, n4, n5);
+      let menor = Math.min(n1, n2, n3, n4, n5);
+      alert("Maior: " + maior + "\nMenor: " + menor);
+    }
 
-
-            () => {
-                let num = Number(prompt("Digite um número:"));
-                alert(num >= 1 && num <= 10 ? "O número está na faixa de 1 a 10." : "O número está fora da faixa de 1 a 10.");
-            },
-
-
-            () => {
-                let num = Number(prompt("Digite um número:"));
-                alert(num > 0 ? "Número positivo." : num < 0 ? "Número negativo." : "Número nulo.");
-            },
-
-
-            () => {
-                let a = Number(prompt("Digite o primeiro número:"));
-                let b = Number(prompt("Digite o segundo número:"));
-                alert(b !== 0 && a % b === 0 ? "O segundo número é divisor do primeiro." : "O segundo número não é divisor do primeiro.");
-            },
-
-
-            () => {
-                let num = Number(prompt("Digite um número de 3 dígitos:"));
-                alert("Algarismo das centenas: " + Math.floor(Math.abs(num) / 100));
-            },
-
-
-            () => {
-                let nums = [];
-                for (let i = 0; i < 5; i++) nums.push(Number(prompt(`Digite o número ${i + 1}:`)));
-                alert(`Maior número: ${Math.max(...nums)}\nMenor número: ${Math.min(...nums)}`);
-            },
-
-
-            () => {
-                let a = Number(prompt("Digite o valor A:"));
-                let b = Number(prompt("Digite o valor B:"));
-                let c = Number(prompt("Digite o valor C:"));
-                let ordenados = [a, b, c].sort((x, y) => x - y);
-                alert("Valores em ordem crescente: " + ordenados.join(", "));
-            }
-        ];
-
-        const container = document.getElementById("botoes");
-        exercicios.forEach((_, i) => {
-            let btn = document.createElement("button");
-            btn.textContent = `Exercício ${i + 1}`;
-            btn.onclick = exercicios[i];
-            container.appendChild(btn);
-        });
-    </script>
+    function ex13() {
+      let a = Number(prompt("Digite o primeiro número:"));
+      let b = Number(prompt("Digite o segundo número:"));
+      let c = Number(prompt("Digite o terceiro número:"));
+      let lista = [a, b, c];
+      lista.sort(function(x, y) { return x - y });
+      alert("Ordem crescente: " + lista.join(", "));
+    }
+  </script>
 </body>
-
 </html>
